--- a/catalog.html
+++ b/catalog.html
@@ -75,6 +75,7 @@
       <section class="bread-crumbs">
         <h2 class="visually-hidden">Меню "хлебные крошки"</h2>
         <ul class="ul-style list-link-crumbs">
+          <li><a class="index-link-crumbs" href="index.html"></a></li>
           <li><a class="catalog-link-crumbs" href="catalog.html">Каталог</a></li>
           <li><a class="tool-link-crumbs" href="blank.html">Инструмент</a></li>
           <li><a class="hammer-link-crumbs" href="catalog.html">Перфораторы</a></li>
@@ -109,11 +110,11 @@
                 <legend>Производители:</legend>
                 <ul class="ul-style list-manufacturers">
                   <li>
-                    <input class="input-background visually-hidden" id ="Bosch" type="checkbox" name="Bosch" checked disabled>
+                    <input class="input-background visually-hidden" id ="Bosch" type="checkbox" name="Bosch" checked>
                     <label class="label-checkbox" for="Bosch">Bosch</label>
                   </li>
                   <li>
-                    <input class="input-background visually-hidden" id ="interskol" type="checkbox" name="Интерскол" disabled>
+                    <input class="input-background visually-hidden" id ="interskol" type="checkbox" name="Интерскол">
                     <label class="label-checkbox" for="interskol">Интерскол</label>
                   </li>
                   <li>
@@ -134,7 +135,7 @@
                 <legend>Питание:</legend>
                 <ul class="ul-style list-manufacturers fieldset-power-list">
                   <li>
-                    <input class="input-background visually-hidden" id ="accum" type="radio" name="power_supply" value="rechargeable" checked>
+                    <input class="input-background visually-hidden" id ="accum" type="radio" name="power_accum" value="rechargeable" checked>
                     <label class="label-radio" for="accum">Аккумуляторные</label>
                   </li>
                   <li>
