--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header class="main-header">
     <section class="main-panel">
       <div class="container wrap-logo"> 
-        <a class="head-logo" href="#"><img src="img/logo.svg" width="108px" alt="Логотип магазина Техномарт"></a>
+        <a class="head-logo" href="#"><img src="img/logo.svg" width="108" height="18" alt="Логотип магазина Техномарт"></a>
         <h2 class="visually-hidden">Панель пользователя</h2>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
           <label  class="search-field" for="search" id="search">
@@ -169,7 +169,7 @@
             <article>
               <h3>Перфоратор <span>Bosch <br> bfg</span> 6000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_6000.jpg" width="144px" alt="фото инструмента">
+                <img src="img\bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
                 <button class="button-buy">Купить</button>
@@ -183,7 +183,7 @@
             <article>
               <h3>Перфоратор <span>Bosch <br> bfg</span> 6000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_6000.jpg" width="144px" alt="фото инструмента">
+                <img src="img\bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
                 <button class="button-buy">Купить</button>
@@ -197,7 +197,7 @@
             <article class="new-mark">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 6000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_6000.jpg" width="144px" alt="фото инструмента">
+                <img src="img\bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
                 <button class="button-buy">Купить</button>
@@ -211,7 +211,7 @@
             <article class="new-mark">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 3000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_3000.jpg" width="127px" alt="фото инструмента">
+                <img src="img\bosch_3000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
                 <button class="button-buy">Купить</button>
@@ -225,7 +225,7 @@
             <article>
               <h3>Перфоратор <span>Bosch <br> bfg</span> 6000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_6000.jpg" width="144px" alt="фото инструмента">
+                <img src="img\bosch_6000.jpg"width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
                 <button class="button-buy">Купить</button>
@@ -239,7 +239,7 @@
             <article class="new-mark">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 2000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_2000.jpg" width="127px" alt="фото инструмента">
+                <img src="img\bosch_2000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
                 <button class="button-buy">Купить</button>
@@ -253,7 +253,7 @@
             <article class="new-mark">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 3000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_3000.jpg" width="127px" alt="фото инструмента">
+                <img src="img\bosch_3000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
                 <button class="button-buy">Купить</button>
@@ -267,7 +267,7 @@
             <article>
               <h3>Перфоратор <span>Bosch <br> bfg</span> 6000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_6000.jpg" width="144px" alt="фото инструмента">
+                <img src="img\bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
                 <button class="button-buy">Купить</button>
@@ -281,7 +281,7 @@
             <article class="new-mark">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 2000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_2000.jpg" width="127px" alt="фото инструмента">
+                <img src="img\bosch_2000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
                 <button class="button-buy">Купить</button>
@@ -316,7 +316,7 @@
   <footer class="footer">
     <div class="footer-wrapper-main">
       <div class="wrap-main-nav container">
-        <a href="#" class="logo-footer"><img src="img/logo_footer.svg" width="136.5px" alt="Логотип магазина">
+        <a href="#" class="logo-footer"><img src="img/logo_footer.svg" width="138" height="23" alt="Логотип магазина">
         </a>
         <section>
           <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
