--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="main-header">
       <section class="main-panel">
         <div class="container wrap-logo"> 
-          <a class="head-logo" href="#"><img src="img/logo.svg" width="108px" alt="Логотип магазина Техномарт"></a>
+          <a class="head-logo" href="#"><img src="img/logo.svg" width="108" height="18" alt="Логотип магазина Техномарт"></a>
           <h2 class="visually-hidden">Панель пользователя</h2>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
             <label  class="search-field" for="search" id="search">
@@ -41,11 +41,11 @@
             </div>
             <div class="account-info">
               <a class="user-panel" href="blank.html">
-                <img src="img/icon_user.png" alt="Иконка-кнопка личного кабинета пользователя">
+                <img src="img/icon_user.png" width="20" height="18" alt="Иконка-кнопка личного кабинета пользователя">
                 Равшан Джамшутович
               </a>
               <a class="user-panel" href="blank.html">
-                <img src="img/icon_logout.png" alt="Иконка-кнопка для выхода из личного кабинета">
+                <img src="img/icon_logout.png" width="20" height="17" alt="Иконка-кнопка для выхода из личного кабинета">
               </a>
               <div class="wrapper-account-panel">
                 <a class="my-orders" href="blank.html">Мои заказы</a>
@@ -140,7 +140,7 @@
           <article>
             <h3>Перфоратор <span>Bosch <br> bfg</span> 9000</h3>
             <div class="wrap-img">
-              <img src="img/bosch_9000.jpg" width="184px" alt="Фото инструмента - Перфоратор Bosch bfg 9000">
+              <img src="img/bosch_9000.jpg" width="184" height="164" alt="Фото инструмента - Перфоратор Bosch bfg 9000">
             </div>
             <div class="buy-popup">
               <button class="button-buy">Купить</button>
@@ -154,7 +154,7 @@
           <article class="new-mark">
             <h3>Перфоратор <span>Bosch <br> bfg</span>  3000</h3>
             <div class="wrap-img">
-              <img src="img\bosch_3000.jpg" width="127px" alt="Фото инструмента - Перфоратор Bosch bfg 3000">
+              <img src="img\bosch_3000.jpg" width="127" height="112" alt="Фото инструмента - Перфоратор Bosch bfg 3000">
             </div>
             <div class="buy-popup">
               <button class="button-buy">Купить</button>
@@ -168,7 +168,7 @@
           <article>
             <h3>Перфоратор <span>Bosch <br> bfg</span> 6000</h3>
             <div class="wrap-img">
-              <img src="img\bosch_6000.jpg" width="144px" alt="Фото инструмента - Перфоратор Bosch bfg 6000">
+              <img src="img\bosch_6000.jpg" width="144" height="128" alt="Фото инструмента - Перфоратор Bosch bfg 6000">
             </div>
             <div class="buy-popup">
               <button class="button-buy">Купить</button>
@@ -182,7 +182,7 @@
           <article class="new-mark">
             <h3>Перфоратор <span>Bosch <br> bfg</span> 2000</h3>
             <div class="wrap-img">
-              <img src="img\bosch_2000.jpg" width="127px" alt="Фото инструмента - Перфоратор Bosch bfg 2000">
+              <img src="img\bosch_2000.jpg" width="127" height="112" alt="Фото инструмента - Перфоратор Bosch bfg 2000">
             </div>
             <div class="buy-popup">
               <button class="button-buy">Купить</button>
@@ -203,35 +203,35 @@
         <ul class="ul-style manufacturers">
           <li>
             <h3 class="visually-hidden">Bosch</h3>
-            <a href="#"><img src="img\bosch.jpg" alt="Логотип фирмы Bosch"></a>
+            <a href="#"><img src="img\bosch.jpg" width="126" height="37" alt="Логотип фирмы Bosch"></a>
           </li>
           <li>
             <h3 class="visually-hidden">Makita</h3>
-            <a href="#"><img src="img\makita.jpg" alt="Логотип фирмы Makita"></a>
+            <a href="#"><img src="img\makita.jpg" width="123" height="40" alt="Логотип фирмы Makita"></a>
           </li>
           <li>
             <h3 class="visually-hidden">DeWALT</h3>
-            <a href="#"><img src="img\dewalt.jpg" alt="Логотип фирмы DeWALT"></a>
+            <a href="#"><img src="img\dewalt.jpg" width="146" height="44" alt="Логотип фирмы DeWALT"></a>
           </li>
           <li>
             <h3 class="visually-hidden">Интерскол</h3>
-            <a href="#"><img src="img\inter.jpg" alt="Логотип фирмы Интерскол"></a>
+            <a href="#"><img src="img\inter.jpg" width="200" height="76" alt="Логотип фирмы Интерскол"></a>
           </li>
           <li>
             <h3 class="visually-hidden">Hitachi</h3>
-            <a href="#"><img src="img\hitachi.jpg" alt="Логотип фирмы Hitachi"></a>
+            <a href="#"><img src="img\hitachi.jpg" width="169" height="31" alt="Логотип фирмы Hitachi"></a>
           </li>
           <li>
             <h3 class="visually-hidden">Lg</h3>
-            <a href="#"><img src="img\LG.jpg" alt=" Логотип фирмы Lg"></a>
+            <a href="#"><img src="img\LG.jpg" width="121" height="73" alt=" Логотип фирмы Lg"></a>
           </li>
           <li>
             <h3 class="visually-hidden">Aeg Power Solutions</h3>
-            <a href="#"><img src="img\aeg.jpg" alt="Логотип фирмы Aeg Power Solutions"></a>
+            <a href="#"><img src="img\aeg.jpg" width="151" height="98" alt="Логотип фирмы Aeg Power Solutions"></a>
           </li>
           <li>
             <h3 class="visually-hidden">metabo</h3>
-            <a href="#"><img src="img\metabo.jpg" alt="Логотип фирмы Metabo work. dont play."></a>
+            <a href="#"><img src="img\metabo.jpg" width="206" height="73" alt="Логотип фирмы Metabo work. dont play."></a>
           </li>
         </ul>
       </section>
@@ -304,7 +304,7 @@
           <p>Вы можете забрать товар сами,<br> 
             заехав в наш офис:
           </p>
-          <a class="map-contacts" href="#"><img src="img\map.jpg" alt="Изображение магазина на карте города"></a>
+          <a class="map-contacts" href="#"><img src="img\map.jpg" width="300" height="158" alt="Изображение магазина на карте города"></a>
           <button class="feed-back-button" type="button">Заблудились? Напишите нам!</button> 
         </section>
       </div>
@@ -312,7 +312,7 @@
     <footer class="footer">
       <div class="footer-wrapper-main">
         <div class="wrap-main-nav container">
-          <a href="#" class="logo-footer"><img src="img/logo_footer.svg" width="136.5px" alt="Логотип магазина">
+          <a href="#" class="logo-footer"><img src="img/logo_footer.svg" width="138" height="23" alt="Логотип магазина">
           </a>
           <section>
             <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
