--- a/catalog.html
+++ b/catalog.html
@@ -4,17 +4,17 @@
   <meta charset="utf-8">
   <title>Перфораторы</title>
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/styles-mini.css" rel="stylesheet">
 </head>
 <body class="page-body">
   <header class="main-header">
     <section class="main-panel">
       <div class="container wrap-logo"> 
-        <a class="head-logo" href="#"><img src="img/logo.svg" width="108" height="18" alt="Логотип магазина Техномарт"></a>
+        <a class="head-logo" href="index.html"><img src="img/logo.svg" width="108" height="18" alt="Логотип магазина Техномарт"></a>
         <h2 class="visually-hidden">Панель пользователя</h2>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-          <label  class="search-field" for="search" id="search">
-            <input class="input-background" type="search" name="search" id="search" aria-labelledby="search" value="Поиск:">
+          <label  class="search-field">
+            <input class="input-background" type="search" name="search" aria-label="search" value="Поиск:">
             <svg class="icon-search" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
           </label>
         </form>
@@ -36,8 +36,8 @@
         </div>
         <div>
             <div class="authorization-registration-disable">
-              <button class="log-in" type="button">Войти</button>
-              <button class="registration" type="button">Регистрация</button>
+              <button class="log-in" type="button" aria-label="Кнопка входа">Войти</button>
+              <button class="registration" type="button" aria-label="Кнопка регистрации">Регистрация</button>
             </div>
             <div class="account-info-on">
               <div class="wrap-accout-info">
@@ -58,14 +58,14 @@
     <section class="main-nav">
       <h2 class="visually-hidden">Главная навигация по страницам сайта</h2>
       <nav class="nav-menu">
-        <ul class="ul-style">
-          <li><a href="index.html">Главная</a></li>
+        <ul class="ul-style main-list-nav">
+          <li class="main-list-nav-frst"><a class="main-link" href="index.html">Главная</a></li>
           <li><a href="blank.html">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="blank.html">Новости</a></li>
           <li><a href="blank.html">Спецпредложения</a></li>
           <li><a href="blank.html">Доставка</a></li>
-          <li><a href="blank.html">Контакты</a></li>
+          <li class="main-list-nav-last"><a class="last-link" href="blank.html">Контакты</a></li>
         </ul>
       </nav>
     </section>
@@ -75,9 +75,10 @@
       <section class="bread-crumbs">
         <h2 class="visually-hidden">Меню "хлебные крошки"</h2>
         <ul class="ul-style list-link-crumbs">
+          <li><a class="index-link-crumbs" href="index.html"></a></li>
           <li><a class="catalog-link-crumbs" href="catalog.html">Каталог</a></li>
           <li><a class="tool-link-crumbs" href="blank.html">Инструмент</a></li>
-          <li><a class="hammer-link-crumbs" href="catalog.html">Перфораторы</a></li>
+          <li><a class="hammer-link-crumbs" href="blank.html">Перфораторы</a></li>
         </ul>
       </section>
       <h1 class="sections-headline h-color sections-headline-catalog">Перфораторы</h1>
@@ -100,20 +101,18 @@
                 </div>
                 <div class="wrap-price">
                   <input class="price-min input-background" type="text" name="price_min" aria-label="Цена минимальная" value="0">
-                  </input>
                   <input class="price-max input-background" type="text" name="price_max" aria-label="Цена максимальная" value="30000">
-                  </input>
                 </div>
               </fieldset>
               <fieldset class="fieldset-wrap fieldset-manufact">
                 <legend>Производители:</legend>
                 <ul class="ul-style list-manufacturers">
                   <li>
-                    <input class="input-background visually-hidden" id ="Bosch" type="checkbox" name="Bosch" checked disabled>
+                    <input class="input-background visually-hidden" id ="Bosch" type="checkbox" name="Bosch" checked>
                     <label class="label-checkbox" for="Bosch">Bosch</label>
                   </li>
                   <li>
-                    <input class="input-background visually-hidden" id ="interskol" type="checkbox" name="Интерскол" disabled>
+                    <input class="input-background visually-hidden" id ="interskol" type="checkbox" name="Интерскол">
                     <label class="label-checkbox" for="interskol">Интерскол</label>
                   </li>
                   <li>
@@ -124,7 +123,7 @@
                     <input class="input-background visually-hidden" id ="dewalt" type="checkbox" name="Dewalt" checked>
                     <label class="label-checkbox" for="dewalt">Dewalt</label>
                   </li>
-                  <li>
+                  <li class="manufacturers-item-last">
                     <input class="input-background visually-hidden" id ="hitachi" type="checkbox" name="Hitachi" checked>
                     <label class="label-checkbox" for="hitachi">Hitachi</label>
                   </li>
@@ -134,7 +133,7 @@
                 <legend>Питание:</legend>
                 <ul class="ul-style list-manufacturers fieldset-power-list">
                   <li>
-                    <input class="input-background visually-hidden" id ="accum" type="radio" name="power_supply" value="rechargeable" checked>
+                    <input class="input-background visually-hidden" id ="accum" type="radio" name="power_accum" value="rechargeable" checked>
                     <label class="label-radio" for="accum">Аккумуляторные</label>
                   </li>
                   <li>
@@ -143,7 +142,7 @@
                   </li>
                 </ul>
               </fieldset>
-              <button class="search-button" type="submit">Показать</button>
+              <button class="search-button" type="submit" aria-label="Кнопка отправки формы фильтра поиска">Показать</button>
             </form>
         </section>
         <section class="sorting">
@@ -166,130 +165,130 @@
         </section>
         <section class="product-cards item-cards">
           <h2 class="visually-hidden">Карточки товаров</h2>
-            <article>
+            <article class="product-cards-block">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 6000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
+                <img src="img/bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy">Купить</button>
-                <button class="to-bookmarks">В закладки</button>
+                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <p class="new-price">25500 Р.</p>
+                <a href="#" class="new-price">25500 Р.</a>
               </div>
             </article>
-            <article>
+            <article class="product-cards-block">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 6000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
+                <img src="img/bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy">Купить</button>
-                <button class="to-bookmarks">В закладки</button>
+                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <p class="new-price">25500 Р.</p>
+                <a href="#" class="new-price">25500 Р.</a>
               </div>
             </article>
-            <article class="new-mark">
+            <article class="new-mark product-cards-block">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 6000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
+                <img src="img/bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy">Купить</button>
-                <button class="to-bookmarks">В закладки</button>
+                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <p class="new-price">25500 Р.</p>
+                <a href="#" class="new-price">25500 Р.</a>
               </div>
             </article>
-            <article class="new-mark">
+            <article class="new-mark product-cards-block">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 3000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_3000.jpg" width="127" height="112" alt="фото инструмента">
+                <img src="img/bosch_3000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy">Купить</button>
-                <button class="to-bookmarks">В закладки</button>
+                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">22500 Р.</p>
-                <p class="new-price">15500 Р.</p>
+                <a href="#" class="new-price">15500 Р.</a>
               </div>
             </article>
-            <article>
+            <article class="product-cards-block">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 6000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_6000.jpg"width="144" height="128" alt="фото инструмента">
+                <img src="img/bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy">Купить</button>
-                <button class="to-bookmarks">В закладки</button>
+                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <p class="new-price">25500 Р.</p>
+                <a href="#" class="new-price">25500 Р.</a>
               </div>
             </article>
-            <article class="new-mark">
+            <article class="new-mark product-cards-block">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 2000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_2000.jpg" width="127" height="112" alt="фото инструмента">
+                <img src="img/bosch_2000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy">Купить</button>
-                <button class="to-bookmarks">В закладки</button>
+                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <p class="new-price">12500 Р.</p>
+                <a href="#" class="new-price">12500 Р.</a>
               </div>
             </article>
-            <article class="new-mark">
+            <article class="new-mark product-cards-block">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 3000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_3000.jpg" width="127" height="112" alt="фото инструмента">
+                <img src="img/bosch_3000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy">Купить</button>
-                <button class="to-bookmarks">В закладки</button>
+                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">22500 Р.</p>
-                <p class="new-price">15500 Р.</p>
+                <a href="#" class="new-price">15500 Р.</a>
               </div>
             </article>
-            <article>
+            <article class="product-cards-block">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 6000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
+                <img src="img/bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy">Купить</button>
-                <button class="to-bookmarks">В закладки</button>
+                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <p class="new-price">25500 Р.</p>
+                <a href="#" class="new-price">25500 Р.</a>
               </div>
             </article>
-            <article class="new-mark">
+            <article class="new-mark product-cards-block">
               <h3>Перфоратор <span>Bosch <br> bfg</span> 2000</h3>
               <div class="wrap-img">
-                <img src="img\bosch_2000.jpg" width="127" height="112" alt="фото инструмента">
+                <img src="img/bosch_2000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy">Купить</button>
-                <button class="to-bookmarks">В закладки</button>
+                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <p class="new-price">12500 Р.</p>
+                <a href="#" class="new-price">12500 Р.</a>
               </div>
             </article>
         </section>
@@ -307,7 +306,7 @@
     <div class="wrap-about-rotary">
       <section class="about-rotary container">
         <h2 class="sections-headline head-about">Пара слов о перфораторах</h2>
-        <p class="about-perf">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+        <p class="about-perf">Перфоратор − универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
           Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.<br> 
           В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
       </section>
@@ -316,7 +315,7 @@
   <footer class="footer">
     <div class="footer-wrapper-main">
       <div class="wrap-main-nav container">
-        <a href="#" class="logo-footer"><img src="img/logo_footer.svg" width="138" height="23" alt="Логотип магазина">
+        <a href="index.html" class="logo-footer"><img src="img/logo_footer.svg" width="138" height="23" alt="Логотип магазина">
         </a>
         <section>
           <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
@@ -346,6 +345,7 @@
     </div>
     <div class="wrap-second-nav">
       <section class="second-footer-section container">
+        <h2 class="visually-hidden">Блок с ссылками на социальныые сети и копирайт</h2>
         <p class="copyright-company">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
         <ul class="social-icons ul-style">
           <li><a class="vk-link" href="#" aria-label="Мы в Вконтакте"></a></li>
@@ -363,11 +363,11 @@
       <p>Товар добавлен в корзину!</p>
       <div class="wrap-store-button">
         <a class="compl-store" href="blank.html">Оформить заказ</a>
-        <button class="continius-order" type="button">Продолжить покупки</button>
+        <button class="continius-order" type="button" aria-label="Кнопка для продолжения покупок">Продолжить покупки</button>
       </div>
       <button class="order-close" type="button" aria-label="Закрыть окно корзины"></button>
     </div>
   </section>
-  <script src="js/script2.js"></script>
+  <script src="js/catalog-mini.js"></script>
 </body>
 </html>
