--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
         </p>
         <div class="contact-block">
           <div class="wrap-cont-number">
-             <a class="cont-number" href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a>
+             <a class="cont-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
           </div>
           <p class="adress h-color">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
@@ -100,8 +100,10 @@
                   </div>
                 </div>
                 <div class="wrap-price">
-                  <input class="price-min input-background" type="text" name="price_min" aria-label="Цена минимальная" value="0">
-                  <input class="price-max input-background" type="text" name="price_max" aria-label="Цена максимальная" value="30000">
+                  <label for="minprice"></label>
+                  <input class="price-min input-background" type="text" name="price_min" aria-label="Цена минимальная" id="minprice" value="0">
+                  <label for="maxprice"></label>
+                  <input class="price-max input-background" type="text" name="price_max" aria-label="Цена максимальная" id="maxprice" value="30000">
                 </div>
               </fieldset>
               <fieldset class="fieldset-wrap fieldset-manufact">
@@ -329,7 +331,7 @@
             </ul>
           </nav>
         </section>  
-        <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a></p>
+        <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> <a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
         <section>
           <h2 class="visually-hidden">навигация по товарам\услугам</h2>
           <nav class="footer-nav-services">
