--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </p>
           <div class="contact-block">
             <div class="wrap-cont-number">
-               <a class="cont-number" href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a>
+               <a class="cont-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
             </div>
             <p class="adress h-color">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
@@ -320,7 +320,7 @@
               </ul>
             </nav>
           </section>  
-          <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a></p>
+          <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> <a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
           <section>
             <h2 class="visually-hidden">навигация по товарам\услугам</h2>
             <nav class="footer-nav-services">
